--- a/.env.example
+++ b/.env.example
@@ -28,14 +28,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp                        #no tocar
+MAIL_HOST=smtp.gmail.com                #no tocar
+MAIL_PORT=587                           #puerto no tocar
+MAIL_USERNAME=@gmail.com       #correo electronico
+MAIL_PASSWORD="ezgz okkv ttrl hijc"     #password del correo electronico
+MAIL_ENCRYPTION=tls                     #tipo de encriptado
+MAIL_FROM_ADDRESS="@gmail.com" #correo electronico
+MAIL_FROM_NAME="${APP_NAME}"            #no tocar
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
