crear zona para crear juego ver y invitar al juego

--- a/.env.example
+++ b/.env.example
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp                        #no tocar
 MAIL_HOST=smtp.gmail.com                #no tocar
 MAIL_PORT=587                           #puerto no tocar
-MAIL_USERNAME=@gmail.com       #correo electronico
-MAIL_PASSWORD="ezgz okkv ttrl hijc"     #password del correo electronico
+MAIL_USERNAME=iapolosrl@gmail.com       #correo electronico
+MAIL_PASSWORD="spzy vlmf ulds dyej"     #password del correo electronico
 MAIL_ENCRYPTION=tls                     #tipo de encriptado
-MAIL_FROM_ADDRESS="@gmail.com" #correo electronico
+MAIL_FROM_ADDRESS="iapolosrl@gmail.com" #correo electronico
 MAIL_FROM_NAME="${APP_NAME}"            #no tocar
 
 AWS_ACCESS_KEY_ID=
