--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=pasanaku
-DB_USERNAME=postgres
-DB_PASSWORD=
+DB_DATABASE=dbreservas
+DB_USERNAME=roberto
+DB_PASSWORD=sesamo
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
